Fix topbar right button alignment
- Remove arbitrary right 138px

--- a/src/renderer/styles/mini/_topbar.scss
+++ b/src/renderer/styles/mini/_topbar.scss
@@ -88,7 +88,7 @@
         // width: calc(var(--button-width) * 2 + 138px);
 
         top: 0;
-        right: 138px;
+        right: 0;
         z-index: 3000;
         display: flex;
         flex-direction: row;
